Remove `java.security.cert` from accepted `opens`.